feat: show first ugly list of items

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -29,6 +29,8 @@
       "@/*": ["src/*"]
     },
 
+    "outDir": "./dest",
+
     "types": ["vite/client"]
   },
   "include": ["src","src/**/*.ts","src/**/*.d.ts","src/**/*.tsx"],
