--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleDetection": "force",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
 
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
