feat: add serilog logging

--- a/src/backend/appsettings.json
+++ b/src/backend/appsettings.json
@@ -1,4 +1,21 @@
 {
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "Using": [ "Serilog.Sinks.ApplicationInsights" ],
+    "WriteTo": [
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "restrictedToMinimumLevel": "Information",
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithThreadId" ],
+    "Properties": {
+      "Application": "TodoApi"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
