--- a/src/backend/TodoApp.Api.csproj
+++ b/src/backend/TodoApp.Api.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0"/>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="8.0.3"/>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.3"/>
   </ItemGroup>
 
 </Project>
